fix label spacing

--- a/public/page/globals/main.less
+++ b/public/page/globals/main.less
@@ -36,3 +36,6 @@
 	transition: top 0.5s ease-out,opacity 0.5s ease-out;
 }
 
+.label {
+	margin: 0 2px;
+}
